# digital-lyceum-free-resources

./: README.md  ai-tutor-workflow.md
tomd/: .gitignore  README.md  pyproject.toml
tomd/skill/: SKILL.md
tomd/tests/: test_cli.py  test_convert.py  test_crypto.py  test_lean.py  test_ocr.py  test_sink.py
tomd/tests/fixtures/: sample.docx  sample.xlsx
tomd/tomd/: cli.py  convert.py  crypto.py  lean.py  ocr.py  sink.py
